[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "bibtex-dblp"
description = "Create and revise bibtex entries from DBLP."
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
dynamic = ["version"]
authors = [
    { name = "M. Volk", email = "m.volk@tue.nl" }
]
requires-python = ">=3.10"
dependencies = [
    "requests",
    "pybtex",
    "pyperclip",  # Copy to clipboard
    "requests-ratelimiter", # Rate limiting for requests
]

[project.urls]
Homepage = "https://github.com/volkm/bibtex-dblp"
"Bug Tracker" = "https://github.com/volkm/bibtex-dblp/issues"

[project.optional-dependencies]
dev = [
    # Formatting
    "black",
]
test = [
    "pytest",
]

[project.scripts]
convert_dblp = "bin.convert_dblp:main"
import_dblp = "bin.import_dblp:main"
modify_bibtex = "bin.modify_bibtex:main"
update_from_dblp = "bin.update_from_dblp:main"

[tool.hatch.version]
path = "bibtex_dblp/__init__.py"

[tool.hatch.build.targets.wheel.force-include]
"bin" = "bin"

[tool.black]
line-length = 160
target-version = [
    "py311",
    "py312",
    "py313",
    "py314",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
